force-app/main/default/objects/uLab_Order__c/fields/Assigned_CRB__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CRB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned CRB</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.CRB_Member__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>uLab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>