force-app/main/default/objects/uLab_Order__c/fields/CRB_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>CRB_Assigned_Date__c</fullName>
    <label>CRB Assigned Date</label>
    <type>DateTime</type>
</CustomField>