force-app/main/default/objects/uLab_Order__c/fields/CRB_Started__c.field-meta.xml
<CustomField>
    <fullName>CRB_Started__c</fullName>
    <label>CRB Started</label>
    <type>DateTime</type>
</CustomField>