force-app/main/default/objects/uLab_Order__c/fields/Date_entered_Case_Ready_to_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_Case_Ready_to_Review_Status__c</fullName>
    <label>Date entered Case Ready to Review Status</label>
    <type>DateTime</type>
</CustomField>