force-app/main/default/objects/uLab_Order__c/fields/Date_Entered_In_Last_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_In_Last_Status__c</fullName>
    <label>Date Entered In Last Status</label>
    <type>DateTime</type>
</CustomField>