force-app/main/default/objects/uLab_Order__c/fields/Date_entered_in_Progress2_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_in_Progress2_Status__c</fullName>
    <description>Stores the date and time when case enters in progress for second time.</description>
    <label>Date entered in Progress2 Status</label>
    <type>DateTime</type>
</CustomField>