force-app/main/default/objects/uLab_Order__c/fields/Date_entered_In_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_In_Progress_Status__c</fullName>
    <label>Date entered In Progress Status</label>
    <type>DateTime</type>
</CustomField>