force-app/main/default/objects/uLab_Order__c/fields/Date_Entered_Manufacturing__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Manufacturing__c</fullName>
    <label>Date Entered Manufacturing</label>
    <type>DateTime</type>
</CustomField>