force-app/main/default/objects/uLab_Order__c/fields/Date_entered_Model_Prep_Cpl_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_Model_Prep_Cpl_Status__c</fullName>
    <description>Stores the date and time when case entered in Model Prep complete status.</description>
    <label>Date entered Model Prep Cpl Status</label>
    <type>DateTime</type>
</CustomField>