force-app/main/default/objects/uLab_Order__c/fields/Date_entered_Model_Prep_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_Model_Prep_Status__c</fullName>
    <label>Date entered Model Prep Status</label>
    <type>DateTime</type>
</CustomField>