force-app/main/default/objects/uLab_Order__c/fields/Date_entered_Modification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_Modification_Complete__c</fullName>
    <description>Stores the date and time when case enters Modification complete status.</description>
    <label>Date entered Modification Complete</label>
    <type>DateTime</type>
</CustomField>