force-app/main/default/objects/uLab_Order__c/fields/Date_entered_On_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_On_Hold_Status__c</fullName>
    <label>Date entered On Hold Status</label>
    <type>DateTime</type>
</CustomField>