force-app/main/default/objects/uLab_Order__c/fields/Date_Entered_Pending__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Pending__c</fullName>
    <label>Date Entered Pending</label>
    <type>DateTime</type>
</CustomField>