force-app/main/default/objects/uLab_Order__c/fields/Date_Entered_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Processed__c</fullName>
    <label>Date Entered Processed</label>
    <type>DateTime</type>
</CustomField>