force-app/main/default/objects/uLab_Order__c/fields/Date_Entered_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Shipped__c</fullName>
    <label>Date Entered Shipped</label>
    <type>DateTime</type>
</CustomField>