force-app/main/default/objects/uLab_Order__c/fields/Date_entered_Tech_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_Tech_Review_Status__c</fullName>
    <description>Stores date and time when case entered in Tech Review Status.</description>
    <label>Date entered Tech Review Status</label>
    <type>DateTime</type>
</CustomField>