force-app/main/default/objects/uLab_Order__c/fields/Date_entered_Treatment_Plan_Review_Sts__c.field-meta.xml
<CustomField>
    <fullName>Date_entered_Treatment_Plan_Review_Sts__c</fullName>
    <description>stores date and time when case entered in Treatment plan review.</description>
    <label>Date entered Treatment Plan Review Sts</label>
    <type>DateTime</type>
</CustomField>