force-app/main/default/objects/uLab_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Preorder</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Complete with Comments</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Declined with Comments</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Doctor Review</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Model Prep Complete</fullName>
            </value>
            <value>
                <fullName>Model Prep in Progress</fullName>
            </value>
            <value>
                <fullName>Modification Complete</fullName>
            </value>
            <value>
                <fullName>Modification Requested</fullName>
            </value>
            <value>
                <fullName>On Hold - Delayed</fullName>
            </value>
            <value>
                <fullName>Under Quality Check</fullName>
            </value>
            <value>
                <fullName>Needs Doctor Review</fullName>
            </value>
            <value>
                <fullName>Retainers Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>