force-app/main/default/objects/uLab_Order__c/fields/Order_Status_Entered_Current__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Entered_Current__c</fullName>
    <label>Order Status Entered Current</label>
    <type>DateTime</type>
</CustomField>