force-app/main/default/objects/uLab_Order__c/fields/Order_Status_Entered_Last__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Entered_Last__c</fullName>
    <label>Order Status Entered Last</label>
    <type>DateTime</type>
</CustomField>