force-app/main/default/objects/uLab_Order__c/fields/Time_CRB_Assigned_to_Pending__c.field-meta.xml
<CustomField>
    <fullName>Time_CRB_Assigned_to_Pending__c</fullName>
    <description>Total hours changing from CRB Assigned to Pending</description>
    <inlineHelpText>Total hours changing from CRB Assigned to Pending</inlineHelpText>
    <label>Time CRB Assigned to Pending</label>
    <summarizedField>ULab_Order_Status_KPI__c.Time_Taken_In_Previous_Status__c</summarizedField>
    <summaryFilterItems>
        <field>ULab_Order_Status_KPI__c.Field_Name__c</field>
        <operation>equals</operation>
        <value>Order_Status__c</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ULab_Order_Status_KPI__c.New_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ULab_Order_Status_KPI__c.Previous_Status__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>ULab_Order_Status_KPI__c.uLab_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>