force-app/main/default/objects/uLab_Order__c/fields/Time_Creation_to_CRB_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Time_Creation_to_CRB_Assigned__c</fullName>
    <description>Total hours from Creation to CRB Assigned</description>
    <inlineHelpText>Total hours from Creation to CRB Assigned</inlineHelpText>
    <label>Time Creation to CRB Assigned</label>
    <summarizedField>ULab_Order_Status_KPI__c.Time_Taken_In_Previous_Status__c</summarizedField>
    <summaryFilterItems>
        <field>ULab_Order_Status_KPI__c.Field_Name__c</field>
        <operation>equals</operation>
        <value>Assigned_CRB__c</value>
    </summaryFilterItems>
    <summaryForeignKey>ULab_Order_Status_KPI__c.uLab_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>