force-app/main/default/objects/uLab_Order__c/fields/uAssist_Status__c.field-meta.xml
<CustomField>
    <fullName>uAssist_Status__c</fullName>
    <label>uAssist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Model Prep Complete</fullName>
            </value>
            <value>
                <fullName>Model Prep in Progress</fullName>
            </value>
            <value>
                <fullName>Tech Review</fullName>
            </value>
            <value>
                <fullName>Modification Complete</fullName>
            </value>
            <value>
                <fullName>Modification in Progress</fullName>
            </value>
            <value>
                <fullName>Modification Requested</fullName>
            </value>
            <value>
                <fullName>Treatment Plan Review</fullName>
            </value>
            <value>
                <fullName>On Hold - Rx Form needs review</fullName>
            </value>
            <value>
                <fullName>On Hold - New photos needed</fullName>
            </value>
            <value>
                <fullName>On Hold - New scans needed</fullName>
            </value>
            <value>
                <fullName>On Hold - New X-Rays needed</fullName>
            </value>
            <value>
                <fullName>On Hold - New scans, photographs and X-Rays needed</fullName>
            </value>
            <value>
                <fullName>On Hold - Scans and images do not match</fullName>
            </value>
            <value>
                <fullName>On Hold - Please review uAssist Message</fullName>
            </value>
            <value>
                <fullName>On Hold - New photos and Rx form review needed</fullName>
            </value>
            <value>
                <fullName>Case ready to review</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Ready to QC</fullName>
            </value>
            <value>
                <fullName>QC in Progress</fullName>
            </value>
            <value>
                <fullName>Rework Required</fullName>
            </value>
            <value>
                <fullName>Ready for Mod QC</fullName>
            </value>
            <value>
                <fullName>Mod QC In Progress</fullName>
            </value>
            <value>
                <fullName>Declined with Comments</fullName>
                <isActive>false</isActive>
                <label>Declined with Comments</label>
            </value>
            <value>
                <fullName>Delayed</fullName>
                <isActive>false</isActive>
                <label>Delayed</label>
            </value>
            <value>
                <fullName>Doctor Review</fullName>
                <isActive>false</isActive>
                <label>Doctor Review</label>
            </value>
            <value>
                <fullName>Keep</fullName>
                <isActive>false</isActive>
                <label>Keep</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>